Attempt to fix images cutting off in details page

--- a/styles.css
+++ b/styles.css
@@ -445,7 +445,7 @@ h2 {
 
 .timelinething img {
   max-height: 50%;
-  width: 100%;
+  /* max-width: 100%; */
   max-width: fit-content;
   object-fit: cover;
   margin: 0;
